--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment configuration files
+.env
+.env.*
+application_default_credentials.json
+serviceAccountKey.json
+
